crates/core-subsystem/core-resolver/src/validation/snapshots/fragment_recursion_direct.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Err(
    FragmentCycle(
        "concertFields",
        Pos(9:17),
    ),
)
