crates/core-subsystem/core-resolver/src/validation/snapshots/fragment_recursion_indirect.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Err(
    FragmentCycle(
        "concertInfo",
        Pos(13:17),
    ),
)
