crates/core-subsystem/core-resolver/src/validation/snapshots/introspection_query_depth_limit_direct-2.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    SelectionSetTooDeep(
        Pos(5:25),
    ),
)
