crates/core-subsystem/core-resolver/src/validation/snapshots/invalid_subfield.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Err(
    InvalidField(
        "foobar",
        "Concert",
        Pos(6:21),
    ),
)
