crates/core-subsystem/core-resolver/src/validation/snapshots/multi_operations_mismatched_operation_name_invalid.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Err(
    MultipleOperationsUnmatchedOperationName(
        "foo",
    ),
)
